test/1.2/errors/T_EOLDVECT.dml
/*
  © 2024 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.2;

device test;

/// COMPILE-ONLY

// disable vect_needs_provisional breaking change
/// API-VERSION 7

// No warning, even though the vect_needs_provisional is disabled.
// This gives a warning in DML 1.4, see
// 1.4/legacy/vect_needs_provisional_disabled,
// and an EOLDVECT with vect_needs_provisional enabled,
// see 1.4/legacy/vect_needs_provisional_enabled
typedef int vect int_vect_t;
